# boilerplates

./: LICENSE  README.md
elixir-phoenix/: .envrc  mix.exs  shell.nix
elixir-phoenix/apps/app/: mix.exs
elixir-phoenix/apps/app/lib/app/: application.ex
elixir-phoenix/apps/app_web/: .gitignore  README.md  mix.exs
elixir-phoenix/apps/app_web/assets/: package-lock.json
elixir-phoenix/apps/app_web/lib/app_web/: application.ex  endpoint.ex
elixir-phoenix/apps/app_web/lib/app_web/views/: error_helpers.ex
elixir-phoenix/config/: config.exs  dev.exs  procfile.dev  prod.exs  prod.secret.exs  test.exs
elixir-phoenix/lib/app_web/: endpoint.ex  router.ex
elixir-phoenix/nix/: nixpkgs.nix
haskell-cli/: README.md  cli.cabal  shell.nix
haskell-cli/nix/: hls.nix  nixpkgs.nix
haskell-cli/src/: Cli.hs
haskell-cli/test/: CliSpec.hs  Spec.hs
latex-doc/: Makefile  README.md  doc.tex  shell.nix
python/: .gitignore  README.md  shell.nix
python-fastapi/: .envrc  README.md  shell.nix
python-fastapi/api/: app.py  config.py
python-fastapi/config/: procfile.dev  settings.env
python-fastapi/migrations/: 0001_schema.sql
python-fastapi/nix/: nixpkgs.nix
python/my_module/: __main__.py
python/nix/: nixpkgs.nix
python/tests/: test_example.py
